# Fastest

./: .gitignore  CMakeLists.txt  INSTALLER_SETUP.md  LOGO_PROMPT.txt  README.md
.github/workflows/: build.yml  release.yml
MacBrowser.app/Contents/: Info.plist
releases/v0.1/: MacBrowser
resources/: AppIcon.icns  Info.plist  home.html  newtab.html
scripts/: build-app.sh  build.sh  create-dmg-background.sh  create-dmg.sh  package-app.sh  png-to-icns.sh  release.sh
scripts/lib/: version.sh
src/: BrowserApp.h  BrowserApp.mm  main.mm
